objects/User.object
<CustomObject>
    <fields>
        <fullName>Alternate_PTO_Approver__c</fullName>
        <description>The Alternate PTO Approver will have the same access as the PTO Approver.</description>
        <inlineHelpText>Alternate PTO Approver will have the same ability as the PTO Approver assigned to the User</inlineHelpText>
        <label>Alternate PTO Approver</label>
        <relationshipName>User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Auto_Time_Log_Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Time Log Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avaya_ID__c</fullName>
        <description>Phone system login/extension.</description>
        <label>Avaya ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Account_ID__c</fullName>
        <description>Account ID for the related Business Unit</description>
        <formula>CASE(Business_Unit__c,
&quot;VIN&quot;,&quot;0017000000OWPb4&quot;,
&quot;VAT&quot;,&quot;00170000019FCgg&quot;,
&quot;HAY&quot;,&quot;00170000010aBiA&quot;,
&quot;&quot;)</formula>
        <label>BU Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <inlineHelpText>month and day only</inlineHelpText>
        <label>Birthday</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_1__c</fullName>
        <label>Break 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_2__c</fullName>
        <label>Break 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Needed by many fields and automation. Please fill out!</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_for_Contact_Filter__c</fullName>
        <description>Referenced by Contact lookup filters to ensure matchup between User&apos;s BU and Contact&apos;s BU.</description>
        <formula>IF(
OR(ISPICKVAL(Business_Unit__c, &quot;vAuto&quot;),  ISPICKVAL(Business_Unit__c, &quot;VAT&quot;)),&quot;vAuto&quot;, &quot;Shared&quot;)</formula>
        <label>Business Unit for Contact Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_to_Chat_Specialist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Click-to-Chat Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>ID for the related Contact.</description>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Click_to_Chat_Specialist2__c</fullName>
        <formula>Current_Click_to_Chat_Specialist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Click-to-Chat Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Click_to_Chat_Specialist__c</fullName>
        <label>Current Click-to-Chat Specialist</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Default_Project_Owner_Formula__c</fullName>
        <formula>Current_Default_Project_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Default Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Default_Project_Owner__c</fullName>
        <label>Current Default Project Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Email_Banner_Rep_Formula__c</fullName>
        <formula>Current_Email_Banner_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Email Banner Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Email_Banner_Rep__c</fullName>
        <label>Current Email Banner Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Manager_of_Training_Formula__c</fullName>
        <formula>Current_Manager_of_Training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Manager of Training</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Manager_of_Training__c</fullName>
        <label>Current Manager of Training</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Person_In_Charge_of_Printing_Sh2__c</fullName>
        <formula>Current_Person_In_charge_of_Printing_Shi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Person In Charge of Printing/Shi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Person_In_charge_of_Printing_Shi__c</fullName>
        <label>Current Person In charge of Printing/Shi</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Travel_Arranger2__c</fullName>
        <formula>Current_Travel_Arranger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Travel Arranger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Travel_Arranger__c</fullName>
        <label>Current Travel Arranger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Travel_Financer2__c</fullName>
        <formula>Current_Travel_Financer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Travel Financer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Travel_Financer__c</fullName>
        <label>Current Travel Financer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_VinCamera_Assets2__c</fullName>
        <formula>Current_VinCamera_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current VinCamera Assets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_VinCamera_Assets__c</fullName>
        <label>Current VinCamera Assets</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Welcome_Packet_Rep_Formula__c</fullName>
        <formula>Current_Welcome_Packet_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Welcome Packet Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Welcome_Packet_Rep__c</fullName>
        <label>Current Welcome Packet Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_In_Charge_of_Printing2__c</fullName>
        <formula>Currently_In_Charge_of_Printing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently In Charge of Printing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_In_Charge_of_Printing__c</fullName>
        <label>Currently In Charge of Printing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_In_Charge_of_Shipping2__c</fullName>
        <formula>Currently_In_Charge_of_Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently In Charge of Shipping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_In_Charge_of_Shipping__c</fullName>
        <label>Currently In Charge of Shipping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Deactivated__c</fullName>
        <label>Date Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivated_By__c</fullName>
        <label>Deactivated By:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Project_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Project Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Approver_2__c</fullName>
        <label>Delegated Approver (2)</label>
        <relationshipName>DAUsers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Department_Group__c</fullName>
        <description>Used by Visual Workflow where we need to display more than 200 Vin Employees.</description>
        <formula>IF(
   IsActive = FALSE || CONTAINS ( FirstName, &quot;House&quot; ),
   null,
   IF( CONTAINS( Profile.Name, &quot;Customer Portal&quot; ) || !CONTAINS( Username, &quot;vinsolutions.com&quot; ) ,
      null,
      IF(
         Department = &quot;Support&quot; || Department = &quot;Implementation&quot; || Department = &quot;Integration&quot; || Department = &quot;Performance Management&quot; || Department = &quot;VinCare&quot;,
         &quot;Support/Implementation/Performance Management&quot;,
         IF(
            Department = &quot;Creative&quot; || Department = &quot;Fulfillment&quot;,
            &quot;Creative/Fulfillment&quot;,
            IF(
               CONTAINS ( Department, &quot;Training&quot; ),
               &quot;Training&quot;,
               IF(
                  Department = &quot;Sales&quot;,
                  &quot;Sales&quot;,
                  &quot;Other&quot;
))))))</formula>
        <label>Department Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Banner_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Banner Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Settings_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Settings Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Internal_Id__c</fullName>
        <description>A hidden field used for Tamer reports only.</description>
        <formula>FirstName  &amp;  LastName</formula>
        <label>Employee Internal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number (PTO)</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <inlineHelpText>This field is for HR purposes, please make sure to complete this field when creating the New user from a PAN</inlineHelpText>
        <label>Employee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor/New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/Rehire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehire F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehire P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <picklist>
            <picklistValues>
                <fullName>4:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Scheduled_Hour_Count__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Fridays.</inlineHelpText>
        <label>Friday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HR_Department__c</fullName>
        <description>Field to match PANs for HR.</description>
        <inlineHelpText>Field to match PANs for HR.</inlineHelpText>
        <label>HR Department</label>
        <picklist>
            <picklistValues>
                <fullName>HY17691000 HY Ad Ops - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17676000 HY Ad Ops - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17690000 HY Content - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17675000 HY Content - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17697000 HY Development - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17682000 HY Development - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17698000 HY Executive - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17683000 HY Executive - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17687000 HY Finance - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17672000 HY Finance - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17699000 HY Human Resources - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17684000 HY Human Resources - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17696000 HY Implementation - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17681000 HY Implementation - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17688000 HY IT - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17673000 HY IT - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17671000 HY Marketing - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17686000 HY Marketing - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17692000 HY Operations - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17677000 HY Operations - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17695000 HY Performance Mgmnt - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17680000 HY Perform. Mgmnt - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17670000 HY Product - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17685000 HY Product - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17689000 HY Sales – SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17674000 HY Sales - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17693000 HY Support - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17678000 HY Support - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17694000 HY Training - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17679000 HY Training - Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Job_Title__c</fullName>
        <description>Used to match New Job Title field from PAN for HR.</description>
        <inlineHelpText>Used to match New Job Title field from PAN for HR.</inlineHelpText>
        <label>HR Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>A017 - Instructional Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1135 - Account Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1171 - Accounting Associate I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1172 - Accounting Associate II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1002 - Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1003 - Admin Assist Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1173 - Admin Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1214 - Application Support Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1337 - Associate Data Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1264 – Associate Mgr, Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1254 - Assoc Mgr, Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1168 - Associate Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1260 - Assoc Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1169 - Associate Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1163 - Brand Coord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1005 - Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1275 - Business Development Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1335 - Certified Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1229 - Compliance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1009 - Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1143 - Corporate Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1222 - Corporate Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1013 - Creative Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1014 - Creative Designer Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1106 - Creative Project Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1177 - Cust. Service Rep II- Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1178 - Cust. Service Rep II- Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1176 - Customer Service Rep I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1162 - Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1124 - Database Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Employee&apos;s Home Address</description>
        <inlineHelpText>Employee&apos;s Home Address</inlineHelpText>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Need a private field that we can input the contact number for the employee</description>
        <inlineHelpText>Need a private field that we can input the contact number for the employee. When a number is provided in the PAN this is where it will be entered.</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hourly_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box if the employee is paid hourly</inlineHelpText>
        <label>Hourly Employee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Charge_of_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Charge of Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Charge_of_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Charge of Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_charge_of_Printing_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In charge of Printing/Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instant_Messenger__c</fullName>
        <label>Instant Messenger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Profile_Change_By__c</fullName>
        <description>Uses email address because names get changed.</description>
        <inlineHelpText>The email address of the person who last changed the profile on this user. Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Last Profile Change By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Profile_Change_Date__c</fullName>
        <inlineHelpText>The date of the last profile assignment change for this user. Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Last Profile Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Role_Change_By__c</fullName>
        <description>Uses email address because names get changed.</description>
        <inlineHelpText>The email address of the person who last changed the role on this user. Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Last Role Change By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Role_Change_Date__c</fullName>
        <inlineHelpText>The date of the last role assignment change for this user. Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Last Role Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Hours__c</fullName>
        <label>Lunch Hours</label>
        <picklist>
            <picklistValues>
                <fullName>11:30 - 12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 2:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 3:00 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MI__c</fullName>
        <label>MI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Address__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <formula>Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Internal_ID__c</fullName>
        <description>A hidden field used for Tamer reports only.</description>
        <formula>Manager.FirstName  &amp;  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Internal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_of_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager of Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_Scheduled_Hour_Count__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The total number of hours scheduled to be worked by this employee on Mondays.</inlineHelpText>
        <label>Monday Scheduled Hour Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlook_Email__c</fullName>
        <description>Outlook Email is a field created for the change request code.</description>
        <inlineHelpText>To be edited by Salesforce Team Only!</inlineHelpText>
        <label>Outlook Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Name__c</fullName>
        <description>Outlook Name is a field created for the change request code.</description>
        <inlineHelpText>To be edited by Salesforce Team Only!</inlineHelpText>
        <label>Outlook Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with the flow &quot;Opportunity Confirmation for Performance Managers.&quot;</description>
        <inlineHelpText>Automatically checked when user title = &quot;Performance Manager.&quot; Manually checked when user needs to be included in the flow &quot;Opportunity Confirmation for Performance Managers.&quot;</inlineHelpText>
        <label>PM Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTO_Accrual__c</fullName>
        <inlineHelpText>this field was populated from #&apos;s given by HR after the sale to AutoTrader</inlineHelpText>
        <label>PTO Accrual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Approver__c</fullName>
        <label>PTO Approver</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Portal_User_MotoSnap_Id__c</fullName>
        <formula>Contact.Motosnap_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that reads the user&apos;s Motosnap ID from their contact record, used for reporting.  You can use the Federated ID in list views or reporting.</inlineHelpText>
        <label>Portal User MotoSnap Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <description>Checks profile name for word &quot;Portal&quot;</description>
        <formula>IF(
   CONTAINS(Profile.Name,&quot;Portal&quot;),
   TRUE,
   FALSE
)</formula>
        <inlineHelpText>Checks profile name for word &quot;Portal&quot;</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prior_Profile_Name__c</fullName>
        <inlineHelpText>The name of the last Profile this user had. Note that it WILL NOT show if the user&apos;s profile&apos;s name was changed without the profile assignment itself being changed. 

Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Prior Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Role_Name__c</fullName>
        <inlineHelpText>The name of the last Role this user had. Note that it WILL NOT show if the user&apos;s role&apos;s name was changed without the role assignment itself being changed. 

Est 4/14/14, will contain no data prior to this date.</inlineHelpText>
        <label>Prior Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager_Assignment__c</fullName>
        <inlineHelpText>Used by escalation and workflow. Only one User per Product Line at a time.</inlineHelpText>
        <label>Product Manager Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Campaigns-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM-ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration-Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>